--- a/MediaPlayer.qrc
+++ b/MediaPlayer.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file alias="folder_icon">assets/folder_icon.png</file>
         <file alias="video_icon">assets/video_icon.png</file>
+        <file alias="file_icon">assets/file_icon.png</file>
     </qresource>
 </RCC>
