--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,30 +18,30 @@
   </property>
   <widget class="QWidget" name="gridLayoutWidget">
    <layout class="QGridLayout" name="gridLayout_3">
-    <item row="0" column="0" colspan="19">
-     <widget class="QGroupBox" name="groupBox_Video">
+    <item row="1" column="17">
+     <widget class="QLabel" name="label_Total_Time">
       <property name="enabled">
        <bool>true</bool>
       </property>
-      <property name="minimumSize">
+      <property name="maximumSize">
        <size>
-        <width>1080</width>
-        <height>720</height>
+        <width>90</width>
+        <height>16777215</height>
        </size>
       </property>
-      <property name="styleSheet">
-       <string notr="true">QGroupBox
-{
-        border:1px solid black;
-}</string>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+        <bold>true</bold>
+       </font>
       </property>
-      <property name="title">
-       <string/>
+      <property name="text">
+       <string>00:00:00</string>
       </property>
      </widget>
     </item>
-    <item row="2" column="4">
-     <widget class="QPushButton" name="pushButton_Stop">
+    <item row="2" column="15">
+     <widget class="QPushButton" name="pushButton_Volume">
       <property name="maximumSize">
        <size>
         <width>50</width>
@@ -72,29 +72,79 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="18">
-     <widget class="QLabel" name="label_Total_Time">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
+    <item row="2" column="1">
+     <widget class="QPushButton" name="pushButton_Seek_Backward">
       <property name="maximumSize">
        <size>
-        <width>90</width>
-        <height>16777215</height>
+        <width>50</width>
+        <height>50</height>
        </size>
       </property>
-      <property name="font">
-       <font>
-        <pointsize>12</pointsize>
-        <bold>true</bold>
-       </font>
-      </property>
       <property name="text">
-       <string>00:00:00</string>
+       <string/>
       </property>
      </widget>
     </item>
-    <item row="0" column="19" rowspan="3">
+    <item row="2" column="2">
+     <widget class="QPushButton" name="pushButton_Seek_Forward">
+      <property name="maximumSize">
+       <size>
+        <width>50</width>
+        <height>50</height>
+       </size>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1" colspan="16">
+     <widget class="QSlider" name="horizontalSlider_Duration">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>910</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="focusPolicy">
+       <enum>Qt::FocusPolicy::NoFocus</enum>
+      </property>
+      <property name="statusTip">
+       <string/>
+      </property>
+      <property name="autoFillBackground">
+       <bool>false</bool>
+      </property>
+      <property name="pageStep">
+       <number>0</number>
+      </property>
+      <property name="tracking">
+       <bool>true</bool>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Orientation::Horizontal</enum>
+      </property>
+      <property name="invertedAppearance">
+       <bool>false</bool>
+      </property>
+      <property name="invertedControls">
+       <bool>false</bool>
+      </property>
+      <property name="tickPosition">
+       <enum>QSlider::TickPosition::NoTicks</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="18" rowspan="3">
      <widget class="QTreeWidget" name="treeWidget">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -169,20 +219,29 @@
       </column>
      </widget>
     </item>
-    <item row="2" column="16">
-     <widget class="QPushButton" name="pushButton_Volume">
-      <property name="maximumSize">
+    <item row="0" column="0" colspan="18">
+     <widget class="QGroupBox" name="groupBox_Video">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="minimumSize">
        <size>
-        <width>50</width>
-        <height>50</height>
+        <width>1080</width>
+        <height>720</height>
        </size>
       </property>
-      <property name="text">
+      <property name="styleSheet">
+       <string notr="true">QGroupBox
+{
+        border:1px solid black;
+}</string>
+      </property>
+      <property name="title">
        <string/>
       </property>
      </widget>
     </item>
-    <item row="2" column="17">
+    <item row="2" column="16">
      <widget class="QSlider" name="horizontalSlider_Volume">
       <property name="maximumSize">
        <size>
@@ -195,33 +254,7 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="1">
-     <widget class="QPushButton" name="pushButton_Seek_Backward">
-      <property name="maximumSize">
-       <size>
-        <width>50</width>
-        <height>50</height>
-       </size>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1" colspan="17">
-     <widget class="QSlider" name="horizontalSlider_Duration">
-      <property name="minimumSize">
-       <size>
-        <width>910</width>
-        <height>0</height>
-       </size>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Orientation::Horizontal</enum>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="3">
+    <item row="2" column="0">
      <widget class="QPushButton" name="pushButton_Play_Pause">
       <property name="maximumSize">
        <size>
@@ -234,8 +267,8 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="2">
-     <widget class="QPushButton" name="pushButton_Seek_Forward">
+    <item row="2" column="3">
+     <widget class="QPushButton" name="pushButton_Stop">
       <property name="maximumSize">
        <size>
         <width>50</width>
@@ -244,16 +277,6 @@
       </property>
       <property name="text">
        <string/>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="5">
-     <widget class="QCheckBox" name="playInViewLOg_check_box">
-      <property name="text">
-       <string>Play in viewlog</string>
-      </property>
-      <property name="checked">
-       <bool>false</bool>
       </property>
      </widget>
     </item>
@@ -273,12 +296,24 @@
      <string>Select Videos Folder</string>
     </property>
     <addaction name="actionOpen"/>
+    <addaction name="playInViewLOg_check_box"/>
    </widget>
    <addaction name="menuSelect_Video_File"/>
   </widget>
   <action name="actionOpen">
    <property name="text">
     <string>Open</string>
+   </property>
+   <property name="visible">
+    <bool>true</bool>
+   </property>
+  </action>
+  <action name="playInViewLOg_check_box">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Play Media in ViewLog</string>
    </property>
   </action>
  </widget>
