--- a/forms/mainwindow.ui
+++ b/forms/mainwindow.ui
@@ -124,6 +124,12 @@
       <property name="autoFillBackground">
        <bool>false</bool>
       </property>
+      <property name="maximum">
+       <number>100</number>
+      </property>
+      <property name="singleStep">
+       <number>0</number>
+      </property>
       <property name="pageStep">
        <number>0</number>
       </property>
