--- a/forms/mainwindow.ui
+++ b/forms/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1506</width>
-    <height>860</height>
+    <width>1133</width>
+    <height>550</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -47,7 +47,32 @@ QMenuBar {
    <layout class="QGridLayout" name="gridLayout_3">
     <item row="2" column="0" colspan="2">
      <layout class="QGridLayout" name="player_controls_gridLayout">
-      <item row="0" column="3">
+      <item row="0" column="11">
+       <widget class="QSlider" name="horizontalSlider_Volume">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>35</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>150</width>
+          <height>35</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgba(255, 255, 255, 0);
+groove{
+	selection-color: rgb(255, 0, 4);
+}</string>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Orientation::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="5">
        <widget class="QPushButton" name="pushButton_Seek_Forward">
         <property name="minimumSize">
          <size>
@@ -73,12 +98,152 @@ QMenuBar {
           <height>24</height>
          </size>
         </property>
+        <property name="shortcut">
+         <string>Right</string>
+        </property>
+        <property name="flat">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="10">
+       <widget class="QPushButton" name="pushButton_Volume">
+        <property name="minimumSize">
+         <size>
+          <width>35</width>
+          <height>35</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>35</width>
+          <height>35</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgba(122, 20, 212, 128);</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>24</width>
+          <height>24</height>
+         </size>
+        </property>
+        <property name="shortcut">
+         <string>M</string>
+        </property>
+        <property name="flat">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="7">
+       <widget class="QPushButton" name="nextButton">
+        <property name="minimumSize">
+         <size>
+          <width>35</width>
+          <height>35</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>35</width>
+          <height>35</height>
+         </size>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>24</width>
+          <height>24</height>
+         </size>
+        </property>
         <property name="flat">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="0" column="2">
+       <widget class="QPushButton" name="pushButton_Seek_Backward">
+        <property name="minimumSize">
+         <size>
+          <width>35</width>
+          <height>35</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>35</width>
+          <height>35</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgba(122, 20, 212, 128);</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>24</width>
+          <height>24</height>
+         </size>
+        </property>
+        <property name="shortcut">
+         <string>Left</string>
+        </property>
+        <property name="flat">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="9">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Orientation::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="0" column="1">
+       <widget class="QPushButton" name="prevButton">
+        <property name="minimumSize">
+         <size>
+          <width>35</width>
+          <height>35</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>35</width>
+          <height>35</height>
+         </size>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>24</width>
+          <height>24</height>
+         </size>
+        </property>
+        <property name="flat">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="3">
        <widget class="QPushButton" name="pushButton_Stop">
         <property name="minimumSize">
          <size>
@@ -109,76 +274,7 @@ QMenuBar {
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QPushButton" name="pushButton_Seek_Backward">
-        <property name="minimumSize">
-         <size>
-          <width>35</width>
-          <height>35</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>35</width>
-          <height>35</height>
-         </size>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">background-color: rgba(122, 20, 212, 128);</string>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-        <property name="iconSize">
-         <size>
-          <width>24</width>
-          <height>24</height>
-         </size>
-        </property>
-        <property name="flat">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="5">
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Orientation::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="0" column="7">
-       <widget class="QSlider" name="horizontalSlider_Volume">
-        <property name="minimumSize">
-         <size>
-          <width>0</width>
-          <height>35</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>150</width>
-          <height>35</height>
-         </size>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">background-color: rgba(255, 255, 255, 0);
-groove{
-	selection-color: rgb(255, 0, 4);
-}</string>
-        </property>
-        <property name="orientation">
-         <enum>Qt::Orientation::Horizontal</enum>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0">
+      <item row="0" column="4">
        <widget class="QPushButton" name="pushButton_Play_Pause">
         <property name="minimumSize">
          <size>
@@ -205,38 +301,7 @@ groove{
          </size>
         </property>
         <property name="shortcut">
-         <string/>
-        </property>
-        <property name="flat">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="6">
-       <widget class="QPushButton" name="pushButton_Volume">
-        <property name="minimumSize">
-         <size>
-          <width>35</width>
-          <height>35</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>35</width>
-          <height>35</height>
-         </size>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">background-color: rgba(122, 20, 212, 128);</string>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-        <property name="iconSize">
-         <size>
-          <width>24</width>
-          <height>24</height>
-         </size>
+         <string>Space</string>
         </property>
         <property name="flat">
          <bool>true</bool>
@@ -276,19 +341,16 @@ color: rgb(255, 255, 255);</string>
         </property>
        </widget>
       </item>
-      <item alignment="Qt::AlignmentFlag::AlignLeft">
-       <widget class="QQuickWidget" name="quickWidget">
+      <item>
+       <widget class="QSlider" name="horizontalSlider_Duration">
         <property name="minimumSize">
          <size>
-          <width>300</width>
-          <height>0</height>
+          <width>0</width>
+          <height>35</height>
          </size>
         </property>
-        <property name="styleSheet">
-         <string notr="true"/>
-        </property>
-        <property name="resizeMode">
-         <enum>QQuickWidget::ResizeMode::SizeRootObjectToView</enum>
+        <property name="orientation">
+         <enum>Qt::Orientation::Horizontal</enum>
         </property>
        </widget>
       </item>
@@ -346,8 +408,14 @@ color: rgb(255, 255, 255);</string>
          </size>
         </property>
         <property name="styleSheet">
-         <string notr="true"> text-align: left;
-padding: 5px; </string>
+         <string notr="true">
+QPushButton {
+	border:0.5px solid #2e2d31 ;
+	text-align: left;
+	padding: 5px;
+	background-color: #1e1d21;
+	color: white;
+}</string>
         </property>
         <property name="text">
          <string>  Tree</string>
@@ -374,7 +442,7 @@ padding: 5px; </string>
          <bool>false</bool>
         </property>
         <property name="flat">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
        </widget>
       </item>
@@ -434,7 +502,10 @@ padding: 5px; </string>
        </size>
       </property>
       <property name="styleSheet">
-       <string notr="true">VideoGroupBox{border:0.5px solid rgba(255, 255, 255, 64) ;}</string>
+       <string notr="true">VideoGroupBox{
+	border:0.5px solid #2e2d31 ;
+	background-color: #1e1d21;
+}</string>
       </property>
       <property name="title" stdset="0">
        <string/>
@@ -448,18 +519,25 @@ padding: 5px; </string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1506</width>
+     <width>1133</width>
      <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuSelect_Video_File">
     <property name="title">
-     <string>Select  a Video Folder</string>
+     <string>Add Folder</string>
     </property>
     <addaction name="actionOpen"/>
+   </widget>
+   <widget class="QMenu" name="menuOptions">
+    <property name="title">
+     <string>Options</string>
+    </property>
     <addaction name="playInViewLOg_check_box"/>
+    <addaction name="actionReset_ViewLog"/>
    </widget>
    <addaction name="menuSelect_Video_File"/>
+   <addaction name="menuOptions"/>
   </widget>
   <action name="actionOpen">
    <property name="text">
@@ -480,13 +558,16 @@ padding: 5px; </string>
     <string>Play Media in ViewLog</string>
    </property>
   </action>
+  <action name="actionReset_ViewLog">
+   <property name="text">
+    <string>Reset ViewLog</string>
+   </property>
+   <property name="toolTip">
+    <string extracomment="Deleting all the cache content.">Reset ViewLog</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
-  <customwidget>
-   <class>QQuickWidget</class>
-   <extends>QWidget</extends>
-   <header location="global">QtQuickWidgets/QQuickWidget</header>
-  </customwidget>
   <customwidget>
    <class>VideoGroupBox</class>
    <extends>QWidget</extends>
